--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title> Teste Responsivo </title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
@@ -13,17 +13,17 @@
             <i class="fa fa-bars"></i>
             </div>
             <ul id="barraLateral">
-                <li><a href="../../index.php" data-toggle="tooltip" data-placement="right" title="Tela inicial" id="home"><img src="home.png" width="32px" height="32px">Olá, <?php echo $nomeUsuario;?></a></li>
-                <li><a href="../../Telas/Visualiza/visualizaPerfil.php" data-toggle="tooltip" data-placement="right" title="Alterar o seu perfil" id="perfil"><img src="usuario.png" width="32px" height="32px">Perfil</a></li>
-                <li><a href="../../Telas/Visualiza/visualizaViagem.php" data-toggle="tooltip" data-placement="right" title="Consultar Viagens" id="viagem"><img src="Viagem.png" width="32px" height="32px">Viagem</a></li>
-                <li><a href="../../Telas/Visualiza/visualizaAlocacao.php" data-toggle="tooltip" data-placement="right" title="Consultar Alocações"id="alocacao"><img src="alocacao.png" width="32px" height="32px">Alocação</a></li>
-                <li><a href= "../../Telas/Visualiza/visualizaLinha.php" data-toggle="tooltip" data-placement="right" title="Consultar Linhas" id="linha"><img src="linha.png" width="32px" height="32px">Linha</a></li>
-                <li><a href="../../Telas/Visualiza/visualizaOnibus.php" data-toggle="tooltip" data-placement="right" title="Consultar Ônibus"><img src="onibus.png">Ônibus</a></li>
-                <li><a href = "../../Telas/Visualiza/visualizaFabricante.php" data-toggle="tooltip" data-placement="right" title="Consultar Fabricantes" id="fabricante"><img src="fabricante.png" width="32px" height="32px">Fabricante</a></li>
-                <li><a href = "../../Telas/Visualiza/visualizaModelo.php" data-toggle="tooltip" data-placement="right" title="Consultar Modelos" id="modelo"><img src="modelo.png">Modelo</a></li>
-                <li><a href="../../Telas/Visualiza/visualizaFuncionario.php" data-toggle="tooltip" data-placement="right" title="Consultar Funcionários" id="funcionario"><img src="Funcionario.png" width="32px" height="32px">Funcionário</a></li>
-                <li><a href="../../Telas/Visualiza/visualizaCooperativa.php" data-toggle="tooltip" data-placement="right" title="Consultar Cooperativas"><img src="cooperativa.png" width="32px" height="32px">Cooperativa</a></li>
-                <li><a href = "../../../../sair.php" data-toggle="tooltip" data-placement="right" title="Sair do sistema" id="sair"><img src="sair.png" width="32px" height="32px">Sair</a></li>
+                <li><a title="Tela inicial" id="home"><img src="img/home.png" width="32px" height="32px">Olá, <?php echo $nomeUsuario;?></a></li>
+                <li><a title="Alterar o seu perfil" id="perfil"><img src="img/usuario.png" width="32px" height="32px">Perfil</a></li>
+                <li><a title="Consultar Viagens" id="viagem"><img src="img/Viagem.png" width="32px" height="32px">Viagem</a></li>
+                <li><a title="Consultar Alocações"id="alocacao"><img src="img/alocacao.png" width="32px" height="32px">Alocação</a></li>
+                <li><a title="Consultar Linhas" id="linha"><img src="img/linha.png" width="32px" height="32px">Linha</a></li>
+                <li><a title="Consultar Ônibus"><img src="img/onibus.png">Ônibus</a></li>
+                <li><a title="Consultar Fabricantes" id="img/fabricante"><img src="img/fabricante.png" width="32px" height="32px">Fabricante</a></li>
+                <li><a title="Consultar Modelos" id="modelo"><img src="img/modelo.png">Modelo</a></li>
+                <li><a title="Consultar Funcionários" id="funcionario"><img src="img/Funcionario.png" width="32px" height="32px">Funcionário</a></li>
+                <li><a title="Consultar Cooperativas"><img src="img/cooperativa.png" width="32px" height="32px">Cooperativa</a></li>
+                <li><a title="Sair do sistema" id="sair"><img src="img/sair.png" width="32px" height="32px">Sair</a></li>
             </ul>
         </nav>
 
