--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a title="Consultar Fabricantes" id="img/fabricante"><img src="img/fabricante.png" width="32px" height="32px">Fabricante</a></li>
                 <li><a title="Consultar Modelos" id="modelo"><img src="img/modelo.png">Modelo</a></li>
                 <li><a title="Consultar Funcionários" id="funcionario"><img src="img/Funcionario.png" width="32px" height="32px">Funcionário</a></li>
-                <li><a title="Consultar Cooperativas"><img src="img/cooperativa.png" width="32px" height="32px">Cooperativa</a></li>
+                <li><a title="Consultar Cooperativas"><img src="img/cooperativa.png" width="32px" height="32px">Coooperativa</a></li>
                 <li><a title="Sair do sistema" id="sair"><img src="img/sair.png" width="32px" height="32px">Sair</a></li>
             </ul>
         </nav>
